@@ -15,6 +15,11 @@
 	<LI>New --nup and NUMBER-UP options for PostScript and PDF
 	output.
 
+	<LI>HTMLDOC now logs HTML errors.
+
+	<LI>HTMLDOC now supports the A3, B, Legal, and Tabloid
+	size names.
+
 	<H3>Changes</H3>
 
 	<LI>The HTML parser now allows BODY to auto-close HEAD
