@@ -1,4 +1,4 @@
-CHANGES.txt - 05/29/2002
+CHANGES.txt - 06/03/2002
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.20
@@ -8,6 +8,8 @@ CHANGES IN HTMLDOC v1.8.20
 	- New --nup and NUMBER-UP options for PostScript and PDF
 	  output.
 	- HTMLDOC now logs HTML errors.
+	- HTMLDOC now supports the A3, B, Legal, and Tabloid
+	  size names.
 
     CHANGES
 
